# from-illusion-to-insight

./: .gitignore  verify_refactoring.py
cpdp_change_aware/: .env.example  README.md  pyproject.toml  run_cpdp_lucene.ps1
cpdp_change_aware/artifacts/: lucene_2.3.0_2.9.0_sample20.jsonl  lucene_2.3.0_2.9.0_sample92.jsonl  lucene_2.9.0_static_sample20.jsonl
cpdp_change_aware/examples/: toy_source.jsonl  toy_target.jsonl
cpdp_change_aware/src/cpdp_change_aware/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
cpdp_change_aware/src/cpdp_change_aware/baselines/: __init__.py  direct_transfer.py  source_change_static.py  static_llm.py
cpdp_change_aware/src/cpdp_change_aware/debate/: __init__.py  static_system.py  system.py
cpdp_change_aware/src/cpdp_change_aware/features/: __init__.py  ast_features.py  context.py  diffing.py
cpdp_change_aware/src/cpdp_change_aware/llm/: __init__.py  client.py
cpdp_change_aware/src/cpdp_change_aware/prompts/: __init__.py  static_templates.py  templates.py
cpdp_change_aware/src/cpdp_change_aware/retrieval/: __init__.py  index.py  static_support.py
src/sdp/: cli.py  config.py
src/sdp/analysis/: __init__.py  diff.py  verdict_parser.py
src/sdp/data/: __init__.py  loader.py
src/sdp/experiments/: evaluator.py  orchestrator.py
src/sdp/llm/: experts.py
